--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.14",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mongoose": "^7.6.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
